--- a/ICI.ProvaCandidato.Web/Views/_ViewImports.cshtml
+++ b/ICI.ProvaCandidato.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ICI.ProvaCandidato.Web
 @using ICI.ProvaCandidato.Web.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.Razor
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
