adicionando tabelas para noticias

--- a/ICI.ProvaCandidato.Web/Views/Home/Index.cshtml
+++ b/ICI.ProvaCandidato.Web/Views/Home/Index.cshtml
@@ -11,17 +11,33 @@
     <div class="tabs">
         <ul class="nav nav-tabs" id="homeTabs" role="tablist">
             <li class="nav-item">
-                <button id="tab1-btn" type="button" class="btn btn-secondary active" data-target="#tab1">Tags</button>
+                <button id="tab1-btn" type="button" class="btn btn-secondary active" data-target="#tabTags">Tags</button>
             </li>
             <li class="nav-item">
-                <button id="tab2-btn" type="button" class="btn btn-secondary" data-target="#tab2">Noticias</button>
+                <button id="tab2-btn" type="button" class="btn btn-secondary" data-target="#tabNoticias">Noticias</button>
             </li>
         </ul>
         <div class="tab-content">
-            <div id="tab1" class="tab-pane active">
+            <div id="tabTags" class="tab-pane active">
+                <div>
+                    <h2>TAGS</h2>
+                    <div id="tagConteiner"></div>
+                </div>
             </div>
-            <div id="tab2" class="tab-pane">
-                Noticias
+            <div id="tabNoticias" class="tab-pane">
+                <div>
+                    <h2>Noticias</h2>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Título</th>
+                                <th>Texto</th>
+                            </tr>
+                        </thead>
+                        <tbody id="noticiaTable">
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
@@ -36,12 +52,24 @@
         fetch("https://localhost:5001/api/Tag")
             .then(response => response.json())
             .then(data => {
-                const tabTags = document.getElementById("tab1");
+                const tabTags = document.getElementById("tagConteiner");
                 console.log(data);
                 data.forEach(function (item) {
-                    tabTags.innerHTML += item.descricao;
+                    tabTags.innerHTML += `<span class="tag-show">${item.descricao}<span>`;
                 });
-                data;
+            })
+        fetch("https://localhost:5001/api/Noticia")
+            .then(response => response.json())
+            .then(data => {
+                const tabTags = document.getElementById("noticiaTable");
+                console.log(data);
+                data.forEach(function (item) {
+                    const tr = document.createElement('tr');
+                    tr.innerHTML = `<td>${item.titulo}</td>
+                                    <td>${item.texto}</td>`;
+                    tabTags.appendChild(tr);
+                });
+                console.log(data)
             })
     }
 
@@ -51,11 +79,16 @@
                 btn.classList.remove('active');
             });
             this.classList.add('active');
+
             const targetId = this.getAttribute('data-target');
             document.querySelectorAll('.tab-content .tab-pane').forEach(tab => {
                 tab.classList.remove('active');
             });
-            document.querySelector(targetId).classList.add('active');
+            const targetTab = document.querySelector(targetId);
+            targetTab.classList.add('active');
+            document.querySelectorAll('.tab-content .tab-pane').forEach(tab => {
+                tab.style.display = (tab === targetTab) ? 'flex' : 'none';
+            });
         });
     });
 </script>
