--- a/ICI.ProvaCandidato.Web/Views/Shared/_Layout.cshtml
+++ b/ICI.ProvaCandidato.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - ICI.ProvaCandidato.Web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/ici.css" />
 </head>
 <body>
     <header>
