criando alerts para forms de tags

--- a/ICI.ProvaCandidato.Web/Views/Home/Index.cshtml
+++ b/ICI.ProvaCandidato.Web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
 <div class="text-center">
     <div class="tabs">
-        <ul class="nav nav-tabs" id="homeTabs" role="tablist">
+        <ul class="nav nav-tabs" id="homeTabs" role="tablist" style="display:flex; justify-content:space-around">
             <li class="nav-item">
                 <button id="tag-btn" type="button" class="btn btn-secondary active" data-target="#tabTags">Tags</button>
             </li>
