--- a/ICI.ProvaCandidato.Web/Views/Home/Index.cshtml
+++ b/ICI.ProvaCandidato.Web/Views/Home/Index.cshtml
@@ -59,6 +59,8 @@
                                 <th>Texto</th>
                                 <th>Usuario</th>
                                 <th>Email</th>
+                                <th>Editor</th>
+                                <th>Excluir</th>
                             </tr>
                         </thead>
                         <tbody id="noticiaTable">
